src/objects/CRMC_PP__ActionGrid_Requestee__c.object
<CustomObject>
    <fields>
        <fullName>CRMC_PP__ActionGrid_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Conga Grid Request.</description>
        <label>Conga Grid Request</label>
        <referenceTo>CRMC_PP__ActionGrid_Request__c</referenceTo>
        <relationshipLabel>Conga Grid Requestees</relationshipLabel>
        <relationshipName>ActionGrid_Requestees</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRMC_PP__RequesteeId__c</fullName>
        <description>User or group id text.</description>
        <label>RequesteeId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMC_PP__Type__c</fullName>
        <description>User or Group.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Conga Grid Requestee</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Conga Grid Requestee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Grid Requestees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>